--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -1,4 +1,4 @@
-<% link_image = @exhibition.photos.first.path || "banner-artist.jpeg" %>
+<% link_image = "banner-artist.jpeg" %>
 <div class="banner-company" style="background-image: url('<%= cl_image_path link_image %>');"></div>
   <div class="wrapper exhibition padded">
     <div class="container">
@@ -22,7 +22,7 @@
           <p><i class="fa fa-user" aria-hidden="true"></i><%= @exhibition.user.first_name %> <%= @exhibition.user.last_name %></p>
           <p><i class="fa fa-clock-o" aria-hidden="true"></i>Starting: <%= @exhibition.start_date%>  Ending: <%= @exhibition.end_date%></p>
           <p><i class="fa fa-map-marker" aria-hidden="true"></i><%= @exhibition.address %> </p>
-          <p><i class="fa fa-money" aria-hidden="true"></i><%= @exhibition.min_price %>$</p>
+          <p><i class="fa fa-money" aria-hidden="true"></i><%= @exhibition.min_price_cents %>$</p>
           <br>
         </div>
 
