show exhibition carroussel

--- a/app/assets/stylesheets/pages/_show_exhibition.scss
+++ b/app/assets/stylesheets/pages/_show_exhibition.scss
@@ -27,14 +27,18 @@
 
 .description-content h3 {
   text-align: center;
+  margin-top: 30px;
 }
 
 .list-exhibition i {
-  margin-right: 20px;
+  margin-right: 10px;
 }
 
 .user-paths.exhibition-show {
-    text-align: left;
+  text-align: left;
 }
 
+.col-xs-12.col-md-6.bid.pull-right {
+  max-width: 366px;
+}
 
