--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Seeedr | Exhibit the artists of tomorrow in your office</title>
     <meta name="description" content="Seeedr.com helps companies to enlight their workplaces. Find out how to exhibit young artists into your office.">
-    <%= favicon_link_tag 'favicon.ico' %>
+    <%= favicon_link_tag 'favicon.png' %>
 
     <!-- opengraph tags -->
     <meta property="og:title" content="Seeedr | Exhibit the artists of tomorrow in your office" />
