--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -22,7 +22,7 @@
           <p><i class="fa fa-user" aria-hidden="true"></i><%= @exhibition.user.first_name %> <%= @exhibition.user.last_name %></p>
           <p><i class="fa fa-clock-o" aria-hidden="true"></i>Starting: <%= @exhibition.start_date%>  Ending: <%= @exhibition.end_date%></p>
           <p><i class="fa fa-map-marker" aria-hidden="true"></i><%= @exhibition.address %> </p>
-          <p><i class="fa fa-money" aria-hidden="true"></i><%= @exhibition.min_price_cents %>$</p>
+          <p><i class="fa fa-money" aria-hidden="true"></i><%= @exhibition.price %>$</p>
           <br>
         </div>
 
