show-order-design

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,37 @@
-<h1>Order</h1>
-<ul>
-  <li>Status: <%= @order.state %></li>
-  <li>Item: <%= @order.bid_price %></li>
-  <li>Amount: <%= humanized_money_with_symbol(@order.amount) %></li>
-<ul>
+
+<div class="wrapper confirmation padded">
+  <div class="crTitle padded-top">
+    <%= link_to root_path, class: "navbar-wagon-brand" do %>
+      <%= image_tag "logo.png" %>
+    <% end %>
+    <h1>Payment Confirmation</h1>
+    <p><%= current_user.company_name %>, your payment to Seedr has been received!<br><br>
+  </div>
+  <div class="crReciept">
+    <h2>Payment Successful</h2>
+    <h3>Order Number: <span><%= 1_000_000 + Random.rand(10_000_000 - 1_000_000) %></span></h3>
+    <h3>Method: <span>Credit Card</span></h3>
+    <div class="crItem cf">
+      <br>
+      <p>Amount paid for your exhibition</p>
+      <p class="crAmount text-center"><%= humanized_money_with_symbol(@order.amount) %><sup>00</sup></p>
+    </div>
+    <p class="paymentInfo">
+      <strong>Payment Date: </strong> <%= Date.today.strftime("%B-%d-%Y") %>
+    </p>
+    <p class="paymentInfo">
+      <strong>Payment Made By:</strong><br><%= current_user.company_name %><br>
+      <% if current_user.address? %>
+      <br><%= current_user.address %>
+      <% else %> <%= "" %>
+      <% end %>
+    </p>
+    <p class="paymentInfo">
+      <strong>Payment Made To:</strong><br>
+      SEEEDR<br>
+      16 Villa Gaudelet<br>
+      75011, Paris<br>
+    </p>
+    <p>Questions about your order?<br>Contact us at: contact@seedr.com</p>
+  </div>
+</div>
