homepage artworks content

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -63,9 +63,11 @@ a.btn.btn-primary.btn-lg.artist-banner {
   border-radius: 3px;
 }
 
-
-
 .key-content {
+  font-size: 13px;
+}
+
+.details {
   font-size: 13px;
 }
 
