--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -57,12 +57,12 @@
       <h2 class="padded-mini" style="font-family: 'Basic', sans-serif;">Last Artworks from our Artist community</h2>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
-            <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496659929/Test-image_lrh2to.jpg", width: 250, height: 350, crop: :fill, class: 'home-artwork'%>
-              <p class="description">Testestestestestest</p>
+            <div class="content  ">
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496772320/Daft_ojjnjm.jpg", width: 250, height: 350, crop: :fill, class: 'home-artwork'%>
+              <p class="description">2017 <br> Daft Punk by Riccardo Fano <br> 400mm X 500mm <br> Exclusive edition Giclée Fine Art Print. Printed on 100% cotton, acid-free, heavyweight paper using archival Ultrachrome K3 inks.</p>
             </div>
             <div class="details">
-              <h2 class="name text-center">TEST NAME</h2>
+              <h2 class="name text-center">Daft Punk, Riccardo Fano</h2>
             </div>
           </div>
       </div>
@@ -70,10 +70,10 @@
           <div class="artwork-card">
             <div class="content">
               <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660714/image-sculpture_zxyxpk.jpg", width: 250, height: 350,  crop: :fill, class: 'home-artwork'%>
-              <p class="description">Testestestestestest</p>
+              <p class="description">2017 <br> Dimensions: 50 x 100 x 60 Cm | Inch <br> Editions: Unique artwork <br> Sculpture: steel on steel</p>
             </div>
             <div class="details">
-              <h2 class="name text-center">TEST NAME</h2>
+              <h2 class="name text-center">New Age, Paradox Créations</h2>
             </div>
           </div>
       </div>
@@ -81,10 +81,10 @@
           <div class="artwork-card">
             <div class="content">
               <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660149/image-paint2_nuze49.jpg", width: 250, height: 350, crop: :fill, class: 'home-artwork'%>
-              <p class="description">Testestestestestest</p>
+              <p class="description">2012 <br> Dimensions: 50 x 40 x 1 Cm | Inch <br> Editions: Unique artwork Painting: acrylic on chassis <br> Framing: the artwork is not framed.</p>
             </div>
             <div class="details">
-              <h2 class="name text-center">TEST NAME</h2>
+              <h2 class="name text-center"> Ethiopien, Martin</h2>
             </div>
           </div>
       </div>
@@ -92,10 +92,10 @@
           <div class="artwork-card">
             <div class="content">
               <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660157/image-digital_aospdv.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
-              <p class="description">Testestestestestest</p>
+              <p class="description">2017 <br> This numbered edition Giclée Fine Art Print by Enkel Dika is Printed on 100% cotton, acid-free, heavyweight paper using archival Ultrachrome K3 inks</p>
             </div>
             <div class="details">
-              <h2 class="name text-center">TEST NAME</h2>
+              <h2 class="name text-center">Flourishing of Life, Enkel Dika</h2>
             </div>
           </div>
       </div>
@@ -103,10 +103,10 @@
           <div class="artwork-card">
             <div class="content">
               <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660352/image-photo2_advegl.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
-              <p class="description">Testestestestestest</p>
+              <p class="description">2010 <br> Dimensions: 90 x 90 x 3 Cm | Inch <br> Editions: Edition of 8 <br>Photography : inkjet on fine art paper <br> Framing: frame in wood white</p>
             </div>
             <div class="details">
-              <h2 class="name text-center">TEST NAME</h2>
+              <h2 class="name text-center">Interstice #2, Marie Benattar</h2>
             </div>
           </div>
       </div>
@@ -114,10 +114,10 @@
           <div class="artwork-card">
             <div class="content">
               <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660154/image-paint_ggbfdg.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
-              <p class="description">Testestestestestest</p>
+              <p class="description">2015 <br> Dimensions: 101 x 76 Cm | Inch <br> Editions: Unique artwork <br> Painting: acrylic on canvas</p>
             </div>
             <div class="details">
-              <h2 class="name text-center">TEST NAME</h2>
+              <h2 class="name text-center">23, Gary Paller</h2>
             </div>
           </div>
       </div>
@@ -125,28 +125,28 @@
           <div class="artwork-card">
             <div class="content">
               <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496676584/image-homepage_yprk5w.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
-              <p class="description">Testestestestestest</p>
+              <p class="description">2016 <br> Dimensions: 100 x 100 Cm | Inch <br> Editions: Unique artwork <br> Painting : aerosol paint on paper</p>
             </div>
             <div class="details">
-              <h2 class="name text-center">TEST NAME</h2>
+              <h2 class="name text-center">Sans titre, Jef Aérosol</h2>
             </div>
           </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660716/image-sculpture2_udqsvg.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
-              <p class="description">Testestestestestest</p>
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496773891/max_ycewhb.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
+              <p class="description">2017 <br> Dimensions: 85 x 77 x 18 Cm | Inch <br> Editions: Unique artwork <br>Sculpture: plastic, iron, Wool on steel </p>
             </div>
             <div class="details">
-              <h2 class="name text-center">TEST NAME</h2>
+              <h2 class="name text-center">Le serment d'Épictète #6, Max Boufathal</h2>
             </div>
           </div>
       </div>
        <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496661331/image-moon_i3zbiz.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496774582/ike_nimhow.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">Testestestestestest</p>
             </div>
             <div class="details">
