--- a/app/views/bids/update.js.erb
+++ b/app/views/bids/update.js.erb
@@ -1,6 +1,16 @@
 // change status
+// bid.status => change value
 $('#status-book-<%= @bid.id %>').html("<p><i class='fa fa-thumb-tack' aria-hidden='true'></i> <%= @bid.status %></p>");
+// bouton de la bid => change en book/unbook
 $('#button-book-<%= @bid.id %>').html("<%= j render 'bids/button_book', bid: @bid %>");
+//
 $('.bid-cta:not(#button-book-<%= @bid.id %>)');
 
 
+$('.status-toggle:not(#status-book-<%= @bid.id %>)').html("<p><i class='fa fa-thumb-tack' aria-hidden='true'></i> pending</p>");
+
+
+// // button payment hide or show
+// if ($('#status-book-<%= @bid.id %>').text().trim() === 'accepted') {
+//   $('#payment_button').toggleClass('hidden');
+// };
