--- a/app/views/dashboard/_list_company_exhibitions.erb
+++ b/app/views/dashboard/_list_company_exhibitions.erb
@@ -130,7 +130,7 @@
                     </div>
                   </div>
                 <!-- CTA : book / payment -->
-                <div class="bid-cta pull-right", id= "button-book-<%= bid.id %>" >
+                <div class="bid-cta toggle-button pull-right", id= "button-book-<%= bid.id %>" >
                   <%= render "bids/button_book", bid: bid %>
                 </div>
               </div>
