--- a/app/views/bids/update.js.erb
+++ b/app/views/bids/update.js.erb
@@ -1,13 +1,31 @@
 // change status
-// bid.status => change value
+// status de la bid => change value
 $('#status-book-<%= @bid.id %>').html("<p><i class='fa fa-thumb-tack' aria-hidden='true'></i> <%= @bid.status %></p>");
 // bouton de la bid => change en book/unbook
 $('#button-book-<%= @bid.id %>').html("<%= j render 'bids/button_book', bid: @bid %>");
 //
 $('.bid-cta:not(#button-book-<%= @bid.id %>)');
 
+// -------------------Step 1 validee : statut et bouton au sein de la bid change ---------
 
+
+// Reste a faire : faire changer statut et bouton des autres bids (qui actuellement ne change pas) =>
+
+// 1. change statut des autres bids en pending !
 $('.status-toggle:not(#status-book-<%= @bid.id %>)').html("<p><i class='fa fa-thumb-tack' aria-hidden='true'></i> pending</p>");
+// 2. doit hider les boutons books des autres classes
+
+  // si ca passe de unbook a book this artist => cache autres boutons
+  // if ($('.toggle-book').val() === 'Book this artist !') {
+  //   $('.toggle-button:not(#button-book-<%= @bid.id %>)').toggleClass('hidden');
+  // }
+
+if ($('.toggle-book').val() === 'Unbook !') {
+  $('.toggle-button:not(#button-book-<%= @bid.id %>)').addClass('hidden');
+}
+else {
+  $('.toggle-button:not(#button-book-<%= @bid.id %>)').removeClass('hidden');
+}
 
 
 // // button payment hide or show
