--- a/app/views/dashboard/_list_company_exhibitions.erb
+++ b/app/views/dashboard/_list_company_exhibitions.erb
@@ -64,7 +64,7 @@
           <div class="dashboard-cta">
             <i class="fa fa-bars" aria-hidden="true"></i>
           </div>
-          <div id="payment_button", class= "hidden" >
+          <div id="payment_button", class= "test" >
             <% exhibition.bids.each do |bid| %>
               <% if bid.status == "accepted" %>
                 <%= render "bids/payment_button", bid: bid %>
