--- a/app/views/bids/_payment_button.html.erb
+++ b/app/views/bids/_payment_button.html.erb
@@ -1,4 +1,8 @@
-<%= form_tag orders_path do %>
-  <%= hidden_field_tag 'bid_id', bid.id %>
-  <%= submit_tag 'Payment', class: 'btn-new-small' %>
+<% if bid.status == "accepted" %>
+  <%= form_tag orders_path do %>
+    <%= hidden_field_tag 'bid_id', bid.id %>
+    <%= submit_tag 'Payment', class: 'btn-new-small' %>
+  <% end %>
 <% end %>
+
+
