--- a/app/views/bids/update.js.erb
+++ b/app/views/bids/update.js.erb
@@ -15,11 +15,11 @@ $('.status-toggle:not(#status-book-<%= @bid.id %>)').html("<p><i class='fa fa-th
 // 5. doit hider les boutons books des autres classes
 if ($('.toggle-book').val() === 'Unbook ?') {
   $('.toggle-button:not(#button-book-<%= @bid.id %>)').addClass('hidden');
+  // show payment button
   $('#payment_button').removeClass('hidden');
 }
 else if ($('.toggle-book').val() === 'Book this artist !') {
   $('.toggle-button:not(#button-book-<%= @bid.id %>)').toggleClass('hidden');
-  $('#payment_button').toggleClass('hidden');
+  // hide payment button
+  $('#payment_button').addClass('hidden');
 };
-
-// Step 6 : payment button hide/show
