--- a/app/views/bids/update.js.erb
+++ b/app/views/bids/update.js.erb
@@ -21,5 +21,5 @@ if ($('.toggle-book').val() === 'Unbook ?') {
 else if ($('.toggle-book').val() === 'Book this artist !') {
   $('.toggle-button:not(#button-book-<%= @bid.id %>)').toggleClass('hidden');
   // hide payment button
-  $('#payment_button').addClass('hidden');
+  $('#payment_button').toggleClass('hidden');
 };
