--- a/app/views/exhibitions/new.html.erb
+++ b/app/views/exhibitions/new.html.erb
@@ -6,6 +6,7 @@
         <ul class="list-inline text-center">
           <li class="validate">Choose Category</li>
           <li class="validate">Choose Style</li>
+          <li class="validate">Choose Your Pack</li>
           <li class="active">Finalize</li>
         </ul>
       </div>
