--- a/app/views/exhibitions/new_step_one.html.erb
+++ b/app/views/exhibitions/new_step_one.html.erb
@@ -6,6 +6,7 @@
         <ul class="list-inline text-center">
           <li class="active">Choose Category</li>
           <li>Choose Style</li>
+          <li>Choose Your Pack</li>
           <li>Finalize</li>
         </ul>
       </div>
