Step ok / order in dashboard change

--- a/app/views/dashboard/_list_company_exhibitions.erb
+++ b/app/views/dashboard/_list_company_exhibitions.erb
@@ -1,5 +1,5 @@
 <div class="list-exhibitions">
-  <% current_user.exhibitions.each do |exhibition| %>
+  <% @exhibition.each do |exhibition| %>
     <div class="exhibition">
       <div class="exhibition-header">
         <div class="exhibition-title">
